// Copyright 2021 Owkin Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package orchestrator;

import "common.proto";

option go_package = "github.com/owkin/orchestrator/lib/asset";

message DataManager {
    string key = 1;
    string name = 2;
    string owner = 3;
    Permissions permissions = 4;
    string objective_key = 5; // mutable
    Addressable description = 6;
    Addressable opener = 7;
    map <string, string> metadata = 8;
    string type = 9;
}

message NewDataManager {
    string key = 1;
    string name = 2;
    NewPermissions new_permissions = 3;
    string objective_key = 4;
    Addressable description = 5;
    Addressable opener = 6;
    map <string, string> metadata = 7;
    string type = 8;
}

message NewDataManagerResponse {}

message DataManagerUpdateParam {
    string key = 1;
    string objective_key = 2;
}

message DataManagerUpdateResponse {}

message GetDataManagerParam {
    string key = 1;
}

message QueryDataManagersParam {
    string page_token = 1;
    uint32 page_size = 2;
}

message QueryDataManagersResponse {
    repeated DataManager data_managers = 1;
    string next_page_token = 2;
}

service DataManagerService {
    rpc RegisterDataManager(NewDataManager) returns (NewDataManagerResponse) {}
    rpc UpdateDataManager(DataManagerUpdateParam) returns (DataManagerUpdateResponse) {}
    rpc GetDataManager(GetDataManagerParam) returns (DataManager) {}
    rpc QueryDataManagers(QueryDataManagersParam) returns (QueryDataManagersResponse) {}
}
