syntax = "proto3";

package orchestrator;

option go_package = "github.com/owkin/orchestrator/lib/asset";

import "google/protobuf/timestamp.proto";

message NewPerformance {
  string compute_task_key = 1;
  float performance_value = 2;
}

message Performance {
  string compute_task_key = 1;
  float performance_value = 2;
  google.protobuf.Timestamp creation_date = 3;
}

message GetComputeTaskPerformanceParam {
  string compute_task_key = 1;
}

service PerformanceService {
  rpc RegisterPerformance(NewPerformance) returns (Performance);
  rpc GetComputeTaskPerformance(GetComputeTaskPerformanceParam) returns (Performance);
}